Corrijo primera y segunda extinción.

--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Sexta_Extincion/ITEMS_Sexta_Extincion/PRIMERA_Extincion.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Sexta_Extincion/ITEMS_Sexta_Extincion/PRIMERA_Extincion.html
@@ -16,7 +16,7 @@
 <div class="row">
   <div class="col-sm-12">
     <h2>
-      Primera Extinción: La extinción masiva del Devónico
+      Primera Extinción: La extinción masiva del Ordovícico-Silúrico
     </h2>
   </div>
 </div>
@@ -27,72 +27,68 @@
   <div class="col-sm-12">
       <div class="container">
           <p>
-            La extinción masiva del Devónico es el nombre que se da a una serie de importantes extinciones de 
-            especies al final del Devónico, hace entre 408 y 360 millones de años (Ma).​ Se han reconocido al 
-            menos dos eventos de extinción:nota 1​ el evento Kellwasser en el límite Frasniense-Fameniense y el 
-            evento Hangenberg entre el Fameniense y el Misisipiense.​ Esta crisis de extinción masiva tuvo mayores 
-            efectos en los mares que en los continentes, y afectó más a las especies en las latitudes tropicales que 
-            en las medias. Los organismos más afectados por esta crisis biótica fueron los que habitaban en zonas 
-            marinas templadas. Los corales, que habían dominado el período, vieron mermada su población, y los 
-            arrecifes coralinos no volvieron a ser importantes hasta el Triásico. Aproximadamente el 83 % de las 
-            especies se extinguieron, así como el 50 % de los géneros y el 20 % de las familias.
+             Si se cuentan juntas, las dos extinciones masivas del Ordovícico-Silúrico fueron la primera extinción masiva 
+             más grande que ha padecido la vida en la Tierra, solo superada por la del Pérmico y la única donde no se ha 
+             encontrado presencia llamativa de impactos extraterrestres ni vulcanismo.
+          </p>
+          <p>
+            Ocurrieron hace aproximadamente 440 y 450 millones de años, y marcaron la diferencia entre los períodos 
+            Ordovícico y Silúrico. En esa época, todos los organismos complejos vivían en el mar y cerca de 100 familias 
+            biológicas se extinguieron, lo cual representaba el 85% de las especies de fauna. Los braquiópodos y los 
+            briozoos fueron de los más afectados, junto con las familias de trilobitas, conodontos y graptolites.
+          </p>
+          <p>
+            Existen dos teorías para explicarla. La más antigua postula una glaciación en el planeta; la más reciente 
+            apunta a la explosión de una supernova que irradió la Tierra con efectos devastadores para todos los seres vivos.
           </p>
           <hr>
           <h3>Causas</h3>
-          <h4>Enfriamiento global</h4>
+          <h4>La deriva del supercontinente Gondwana</h4>
           <p>
-            Una de las principales hipótesis que sirven para explicar el origen de las extinciones del 
-            evento Kellwasser consiste en que un enfriamiento rápido del planeta provocó la crisis 
-            biótica. Apoyan esta interpretación la proliferación de organismos adaptados a bajas
-            temperaturas durante las crisis, que fueran los seres vivos que habitaban en latitudes
-            bajas los más afectados, la presencia de sedimentos de origen glaciar del Devónico en
-            el norte de Brasil y la rapidez de variación del nivel del mar durante ese período.
-            Sin embargo, hay argumentos que rebaten la validez de esta hipótesis: por un lado, 
-            los sedimentos glaciares de Brasil se depositaron a finales del Fameniense,​ luego 
-            no explicarían el evento Kellwasser; análisis isotópicos del oxígeno (O) confirman 
-            que el enfriamiento empezó durante el Fameniense;​ los organismos caracterizados 
-            como habitantes de aguas frías también lo pueden ser de aguas profundas, por lo que 
-            su presencia no indica necesariamente un enfriamiento en el límite 
-            Frasniense-Fameniense.
-          </p>
-          <h4>Condiciones de anoxia</h4>
+            La teoría defendida por autores como Ernesto Sartorius (2011, p. 295) postula que la primera extinción 
+            masiva fue causada al inicio de una larga edad de hielo que afectó la mayoría de las zonas costeras 
+            donde vivían la mayoría de los organismos extintos. El supercontinente Gondwana se desplazó hacia 
+            el polo sur y sobre él se formaron enormes glaciares que hicieron bajar el nivel del mar en todo 
+            el mundo al congelarse el agua sobre tierra firme, si la congelación se produce sobre los océanos 
+            su nivel no varía. Esto causó cambios profundos en las corrientes marinas que afectaron la composición 
+            de nutrientes y la oxigenación de los mares. Las especies que sobrevivieron se adaptaron a las nuevas 
+            condiciones y a los nichos que dejaron las extintas. La segunda extinción masiva ocurrió al final 
+            de esta edad de hielo. El supercontinente se desplazó nuevamente hacia el ecuador, fundiendo los 
+            glaciales, alterando otra vez las corrientes marinas y volviendo a variar del nivel de los mares.
           <p>
-            Se ha constatado que durante los límites Frasniense-Fameniense y Devónico-Carbonífero 
-            en los océanos se dieron condiciones de anoxia o bajos niveles de oxígeno. Estos 
-            eventos anóxicos se deducen a partir de la presencia de gran cantidad de lutitas negras 
-            en todo el planeta.​ Las principales objeciones para considerar la anoxia como causante 
-            de las extinciones se basan en la presencia de lutitas negras que no se encuentran 
-            ligadas a eventos de extinción y el corto periodo de tiempo en que tuvieron lugar las 
-            extinciones, mientras que la pérdida de oxígeno en los océanos fue más gradual.
+            Por lo tanto, esta teoría se encuadra en las de tipo gradualista, es decir, la extinción se prolongó 
+            a lo largo de miles o incluso medio millón de años.
           </p>
-          <h4>Salinidad de las aguas</h4>
+          </p>
+          <h4>La explosión de una supernova</h4>
           <p>
-            Ciertas valvas fósiles encontradas en sedimentos marinos del Devónico superior se han 
-            clasificado dentro del orden Conchostraca, cuyos integrantes ocupan nichos de agua dulce. 
-            Para explicar la presencia de estos organismos en facies marinas se ha propuesto que los 
-            océanos se encontraban estratificados, ocupando agua dulce o salobre la capa superior.​ 
-            Este fenómeno podría explicar las extinciones del límite Devónico-Carbonífero.
+            La segunda teoría se debe a Mellot et al. (2004) y postula que la explosión de una supernova cercana 
+            su correspondiente pulso de rayos gamma barrió la Tierra durante unos diez segundos, acabando con 
+            toda o la mayor parte de la capa de ozono, matando o contribuyendo a matar a los seres vivos 
+            que habitaban aguas poco profundas, además la superficie terrestre sería barrida por los rayos 
+            UVA del Sol, no detenidos por la muy deteriorada atmósfera. Pero la radiación gamma produjo un 
+            segundo efecto tan perjudicial o más para la vida, pues debió liberar gran cantidad de gases 
+            derivados del nitrógeno, capaces de bloquear la energía de nuestra estrella. Así se produjo un 
+            enfriamiento global considerablemente rápido que terminaría con la fauna y la flora que hubiera 
+            podido sobrevivir al rayo gamma y la radiación ultravioleta. Autores como Brian Thomas buscan el 
+            isótopo del hierro-60 que se forma sobre todo cuando se producen radiaciones ionizantes muy 
+            energéticas.
           </p>
-          <h4>Calentamiento global</h4>
           <p>
-            Se ha propuesto el calentamiento global como otra alternativa para explicar las extinciones 
-            del Frasniense-Fameniense.​ Además del efecto directo que tendría el aumento de la 
-            temperatura en la desaparición de taxones, también provocaría condiciones de anoxia en las 
-            aguas oceánicas.​ Sin embargo, esta hipótesis no explica por qué los organismos que habitaban 
-            en latitudes altas se vieron menos afectados en el límite Frasniense-Fameniense.​
+            Esta hipótesis aventura una extinción muy rápida comprendida entre uno y mil años, incluso en un 
+            periodo de inferior al año, encuadrándose esta vía en las teorías catastrofistas.
           </p>
-          <h4>Vulcanismo</h4>
+          <h3>Consecuencias</h3>
           <p>
-            Otro modelo que pretende explicar las extinciones masivas ofrece un escenario de intenso 
-            vulcanismo. El rift de Pripyat-Dnieper-Donet, en el este de Europa, estuvo activo durante 
-            el Devónico superior, aunque el volumen de roca volcánica asociada a esta estructura no 
-            parece ser suficiente para explicar las extinciones.​ Se han datado los materiales de los 
-            traps —formaciones basálticas— de Viluy, en Siberia, y la edad calculada es congruente con 
-            la extinción del Frasniense-Fameniense.​ Según los cálculos, la actividad eruptiva que dio 
-            lugar a estos traps podría haber emitido un volumen de roca volcánica de unos 2 000 000 km3,​ 
-            por lo que se tienen en cuenta como posible explicación de la extinción.​
+            La muerte de grandes depredadores como los Orthoceras o los Eurypterida, con un peso comprendido 
+            entre los 90 y los 100 kg, supuso una oportunidad para los primeros animales dotados de una 
+            primitiva espina dorsal y un esqueleto interior, como el Astraspis.4​ Gracias a la desaparición 
+            de los grandes invertebrados, los primeros peces encontraron gran cantidad de nichos biológicos 
+            vacíos que ocuparon hasta llegar a ser las formas de vida más avanzadas en el siguiente periodo, 
+            el Devónico,5​ y creando distintas ramas evolutivas como la de los anfibios, después los reptiles 
+            e incluso los mamíferos en último término.
           </p>
-      </div>
+        </div>
   </div>
 </div>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~[ FINAL ]~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ //-->
