--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Sexta_Extincion/ITEMS_Sexta_Extincion/SEGUNDA_Extincion.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Sexta_Extincion/ITEMS_Sexta_Extincion/SEGUNDA_Extincion.html
@@ -8,42 +8,93 @@
   <link rel="stylesheet" href="../../../css/contenido.css">
   <script src="../../../js/jquery-3.4.1.min.js"></script>
   <script src="../../../js/bootstrap.min.js"></script>
-  <title>Extinciones Masivas</title>
+  <title>Segunda Extinción</title>
 </head>
 
 <body>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~[ SECCION ]~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ //-->
-<div id="titulo">
-  Segunda Extinción
-</div>
-
-<hr color="blue">
-
 <div class="row">
-  <div class="col-sm-9">
-      <div class="container">
-          <p>
-            Una extinción masiva es un tipo de extinción terminal en la cual desaparecen sin descendencia un 10 % o más de las especies a lo largo de un año,
-            o bien un 50 % o más de las especies en un periodo comprendido entre uno y tres millones y medio de años, cuando en momentos normales las extinciones 
-            se producen a un ritmo de entre dos y cinco familias biológicas de invertebrados marinos y vertebrados cada millón de años. Desde que la vida empezó
-            en la Tierra se han detectado cinco sucesos en el eón Fanerozoico tras los cuales se han extinguido más de las mitad de las especies existentes.
-          </p>
-          <p>
-            En ocasiones las extinciones masivas se confunden con un evento ligado a la extinción,​ del inglés Extinction-Level Event o ELE, que sería el suceso, 
-            más o menos largo, provocador de dichas extinciones. Estos eventos son generalmente desconocidos, pero existen evidencias de colisiones con meteoritos 
-            de varios kilómetros, erupciones volcánicas masivas, supernovas cercanas, las acciones de una o más nuevas especies, combinaciones de las anteriores, etc. 
-            Del mismo modo, está bajo discusión si en el Holoceno vivimos la sexta gran extinción y si el surgimiento de las bacterias eucariotas y la exterminación de 
-            muchas bacterias procariotas por la expulsión de oxígeno pudo ser la primera y la desaparición de la Fauna de Ediacara otra más.
-          </p>
-          <hr>
-          
-          Fuente: <a href="https://es.wikipedia.org/wiki/Extinción_masiva"> https://es.wikipedia.org/wiki/Extinción_masiva</a>
-      </div>
+    <div class="col-sm-12">
+      <h2>
+        Segunda Extinción: La extinción masiva del Devónico
+      </h2>
+    </div>
   </div>
-  <div class="col-sm-3">
-    <img src="IMAGENES_Sexta_Extincion/yelmo.jpg" class="img-fluid rounded-circle" alt="Yelmo">
+  
+  <hr color="blue">
+  
+  <div class="row">
+    <div class="col-sm-12">
+        <div class="container">
+            <p>
+              La extinción masiva del Devónico es el nombre que se da a una serie de importantes extinciones de 
+              especies al final del Devónico, hace entre 408 y 360 millones de años (Ma).​ Se han reconocido al 
+              menos dos eventos de extinción:nota 1​ el evento Kellwasser en el límite Frasniense-Fameniense y el 
+              evento Hangenberg entre el Fameniense y el Misisipiense.​ Esta crisis de extinción masiva tuvo mayores 
+              efectos en los mares que en los continentes, y afectó más a las especies en las latitudes tropicales que 
+              en las medias. Los organismos más afectados por esta crisis biótica fueron los que habitaban en zonas 
+              marinas templadas. Los corales, que habían dominado el período, vieron mermada su población, y los 
+              arrecifes coralinos no volvieron a ser importantes hasta el Triásico. Aproximadamente el 83 % de las 
+              especies se extinguieron, así como el 50 % de los géneros y el 20 % de las familias.
+            </p>
+            <hr>
+            <h3>Causas</h3>
+            <h4>Enfriamiento global</h4>
+            <p>
+              Una de las principales hipótesis que sirven para explicar el origen de las extinciones del 
+              evento Kellwasser consiste en que un enfriamiento rápido del planeta provocó la crisis 
+              biótica. Apoyan esta interpretación la proliferación de organismos adaptados a bajas
+              temperaturas durante las crisis, que fueran los seres vivos que habitaban en latitudes
+              bajas los más afectados, la presencia de sedimentos de origen glaciar del Devónico en
+              el norte de Brasil y la rapidez de variación del nivel del mar durante ese período.
+              Sin embargo, hay argumentos que rebaten la validez de esta hipótesis: por un lado, 
+              los sedimentos glaciares de Brasil se depositaron a finales del Fameniense,​ luego 
+              no explicarían el evento Kellwasser; análisis isotópicos del oxígeno (O) confirman 
+              que el enfriamiento empezó durante el Fameniense;​ los organismos caracterizados 
+              como habitantes de aguas frías también lo pueden ser de aguas profundas, por lo que 
+              su presencia no indica necesariamente un enfriamiento en el límite 
+              Frasniense-Fameniense.
+            </p>
+            <h4>Condiciones de anoxia</h4>
+            <p>
+              Se ha constatado que durante los límites Frasniense-Fameniense y Devónico-Carbonífero 
+              en los océanos se dieron condiciones de anoxia o bajos niveles de oxígeno. Estos 
+              eventos anóxicos se deducen a partir de la presencia de gran cantidad de lutitas negras 
+              en todo el planeta.​ Las principales objeciones para considerar la anoxia como causante 
+              de las extinciones se basan en la presencia de lutitas negras que no se encuentran 
+              ligadas a eventos de extinción y el corto periodo de tiempo en que tuvieron lugar las 
+              extinciones, mientras que la pérdida de oxígeno en los océanos fue más gradual.
+            </p>
+            <h4>Salinidad de las aguas</h4>
+            <p>
+              Ciertas valvas fósiles encontradas en sedimentos marinos del Devónico superior se han 
+              clasificado dentro del orden Conchostraca, cuyos integrantes ocupan nichos de agua dulce. 
+              Para explicar la presencia de estos organismos en facies marinas se ha propuesto que los 
+              océanos se encontraban estratificados, ocupando agua dulce o salobre la capa superior.​ 
+              Este fenómeno podría explicar las extinciones del límite Devónico-Carbonífero.
+            </p>
+            <h4>Calentamiento global</h4>
+            <p>
+              Se ha propuesto el calentamiento global como otra alternativa para explicar las extinciones 
+              del Frasniense-Fameniense.​ Además del efecto directo que tendría el aumento de la 
+              temperatura en la desaparición de taxones, también provocaría condiciones de anoxia en las 
+              aguas oceánicas.​ Sin embargo, esta hipótesis no explica por qué los organismos que habitaban 
+              en latitudes altas se vieron menos afectados en el límite Frasniense-Fameniense.​
+            </p>
+            <h4>Vulcanismo</h4>
+            <p>
+              Otro modelo que pretende explicar las extinciones masivas ofrece un escenario de intenso 
+              vulcanismo. El rift de Pripyat-Dnieper-Donet, en el este de Europa, estuvo activo durante 
+              el Devónico superior, aunque el volumen de roca volcánica asociada a esta estructura no 
+              parece ser suficiente para explicar las extinciones.​ Se han datado los materiales de los 
+              traps —formaciones basálticas— de Viluy, en Siberia, y la edad calculada es congruente con 
+              la extinción del Frasniense-Fameniense.​ Según los cálculos, la actividad eruptiva que dio 
+              lugar a estos traps podría haber emitido un volumen de roca volcánica de unos 2 000 000 km3,​ 
+              por lo que se tienen en cuenta como posible explicación de la extinción.​
+            </p>
+        </div>
+    </div>
   </div>
-</div>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~[ FINAL ]~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ //-->
 </body>
 </html>
