Agrego un artículo referente a la primera extinción masiva

--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Sexta_Extincion/ITEMS_Sexta_Extincion/PRIMERA_Extincion.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Sexta_Extincion/ITEMS_Sexta_Extincion/PRIMERA_Extincion.html
@@ -82,10 +82,10 @@
           <p>
             La muerte de grandes depredadores como los Orthoceras o los Eurypterida, con un peso comprendido 
             entre los 90 y los 100 kg, supuso una oportunidad para los primeros animales dotados de una 
-            primitiva espina dorsal y un esqueleto interior, como el Astraspis.4​ Gracias a la desaparición 
+            primitiva espina dorsal y un esqueleto interior, como el Astraspis. Gracias a la desaparición 
             de los grandes invertebrados, los primeros peces encontraron gran cantidad de nichos biológicos 
             vacíos que ocuparon hasta llegar a ser las formas de vida más avanzadas en el siguiente periodo, 
-            el Devónico,5​ y creando distintas ramas evolutivas como la de los anfibios, después los reptiles 
+            el Devónico, y creando distintas ramas evolutivas como la de los anfibios, después los reptiles 
             e incluso los mamíferos en último término.
           </p>
         </div>
