--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Sexta_Extincion/MENU_Sexta_Extincion.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Sexta_Extincion/MENU_Sexta_Extincion.html
@@ -38,6 +38,7 @@
             <div class="nav_titulo">
                Artículos
             </div>
+            <li><a href="ITEMS_Sexta_Extincion/OrdovicianMassExtinction.pdf" target="iframe_a">Did a gamma-ray burst initiate the late Ordovician mass extinction?</a></li>
             <li><a href="ITEMS_Sexta_Extincion/Biodivesidad_combatir_la_sexta_extincion_masiva_B._No.pdf" target="iframe_a">Biodiversidad: combatir la sexta extinción masiva</a></li>
          </ul>
          <br>
