cuerpos de agua

--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Cuerpos_de_Agua/ITEMS_Cuerpos_de_Agua/INTROITO_Cuerpos_de_Agua.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Cuerpos_de_Agua/ITEMS_Cuerpos_de_Agua/INTROITO_Cuerpos_de_Agua.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+
+<!DOCTYPE html>
 <html>
 <head>
   <title>Portada de la Antología de Lógica</title>
@@ -9,27 +10,32 @@
 <style>
   #section{font-family:Verdana; font-size:12px; font-style:bold; text-align:justify;} 
   body{padding: 0px; margin: 0px;}
-  #titulo{font-family: palatino linotype; font-size:18px; padding:2px; width:250px; text-align:left;}
+  #titulo{font-family: palatino linotype; font-size:20px; padding:2px; width:250px; text-align:left;}
 </style>
 </head>
 
 <body BGColor=white>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~[ SECCION ]~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ //-->
 <div id="titulo">
-   Introito
+   Introduccion
 </div>
 
 <hr color="blue">
-
+<br>
 <div id="section">
-   El caracter depredador de muchos hombres, motivados por su codicia, esta haciendo un gran daño a muchas de las especies alrededor del mundo y en consecuencia estan en
-   peligro inminente de extinción. Este caracter depredador es una de las causas que estan contribuyendo a la sexta extinción.
-   <hr>
-   Hugo Rangel<br>
+   La contaminación marina, o contaminación del mar, es la contaminación que afecta a los mares y a los océanos, desde la zona de rompientes hasta el mar abierto. Incluye la que se produce en las costas, en los puertos, en las plataformas pesqueras, en la industria, en la navegación y en las zonas marítimas. Tiene un carácter global y requiere convenios internacionales, como MARPOL, y esfuerzos internacionales dirigidos a reducirla y asegurar un desarrollo sostenible del medio marino.
+<br>
+<br>
+La contaminación marina se produce cuando existen efectos dañinos o potencialmente dañinos que resultan de la introducción al océano de productos químicos, partículas, desechos industriales, agrícolas y residenciales, ruido excesivo o la propagación de organismos invasores. El 80 % de la contaminación marina proviene de la tierra. La contaminación por el aire es también un factor contribuyente al trasladar partículas de pesticidas u otros contaminantes al océano. La contaminación de la tierra y el aire ha demostrado ser perjudicial para la vida marina y sus hábitats.
+<br>
+<br>
+<br>
+<center>
+   <img src="IMAGENES_Cuerpos_de_Agua/58e3bb3316000021004d8a6f.jpg" style="width:50%; float: center;">
+</center>
+<br>
+<hr color="blue">
 </div>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~[ FINAL ]~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ //-->
 </body>
 </html>
-
-
-
