menu cuerpos de agua

--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Cuerpos_de_Agua/MENU_Cuerpos_de_Agua.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Cuerpos_de_Agua/MENU_Cuerpos_de_Agua.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,21 +12,15 @@
    <div class="w3-container w3-quarter" style="background: white">
       <div id="nav">
          <div class="nav_titulo">
-            Contaminación en océanos, ríos, lagos, etc.
+            ContaminaciÃ³n en ocÃ©anos, rÃ­os, lagos, etc.
          </div>
             <ul id="nav_menu">
-               <li><a href="#" target="iframe_a">Texto 1</a></li>
-               <li><a href="#" target="iframe_a">Texto 2</a></li>
-               <li><a href="#" target="iframe_a">Texto 3</a></li>
-               <li><a href="#" target="iframe_a">Texto 4</a></li>
-               <li><a href="#" target="iframe_a">Texto 5</a></li>
-               <li><a href="#" target="iframe_a">Texto 6</a></li>
-               <li><a href="#" target="iframe_a">Texto 7</a></li>
-               <li><a href="#" target="iframe_a">Texto 8</a></li>
-               <li><a href="#" target="iframe_a">Texto 9</a></li>
-               <li><a href="#" target="iframe_a">Texto 10</a></li>
-               <li><a href="#" target="iframe_a">Texto 11</a></li>
-               <li><a href="#" target="iframe_a">Texto 12</a></li>
+               <li><a href="CONTENIDO_Cuerpos_de_Agua/Contaminacion_marina.pdf" target="iframe_a">Contaminacion Marina</a></li>
+               <li><a href="CONTENIDO_Cuerpos_de_Agua/basuras-en-el-mar.pdf" target="iframe_a">Basura en el Mar</a></li>
+               <li><a href="CONTENIDO_Cuerpos_de_Agua/Plastico_marino.pdf" target="iframe_a">Plastico en el Mar</a></li>
+               <li><a href="CONTENIDO_Cuerpos_de_Agua/Contaminacion_en_Mexico.pdf" target="iframe_a">Contaminacion Marina en Mexico</a></li>
+               <li><a href="CONTENIDO_Cuerpos_de_Agua/solucion_marina.pdf" target="iframe_a">Soluciones,Que podemos hacer?...</a></li>
+               <li><a href="CONTENIDO_Cuerpos_de_Agua/VID-20170630-WA0075.mp4" target="iframe_a">Tortugas Marinas(video)</a></li>
             </ul>
             <br>
       </div>
