Cambio la codificación a uft-8

--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Cuerpos_de_Agua/ITEMS_Cuerpos_de_Agua/INTROITO_Cuerpos_de_Agua.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Cuerpos_de_Agua/ITEMS_Cuerpos_de_Agua/INTROITO_Cuerpos_de_Agua.html
@@ -1,32 +1,37 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="es-MX">
 <head>
-  <title>Portada de la Antología de Lógica</title>
-<html>
-<head>
-  <title>BIBLIOTECA DIGITAL</title>
+   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Cuerpos de agua</title>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~[ ESTILO ]~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ //-->
 <style>
   #section{font-family:Verdana; font-size:12px; font-style:bold; text-align:justify;} 
   body{padding: 0px; margin: 0px;}
   #titulo{font-family: palatino linotype; font-size:20px; padding:2px; width:250px; text-align:left;}
 </style>
-</head>
 
 <body BGColor=white>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~[ SECCION ]~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ //-->
 <div id="titulo">
-   Introduccion
+   Introducción
 </div>
 
 <hr color="blue">
 <br>
 <div id="section">
-   La contaminación marina, o contaminación del mar, es la contaminación que afecta a los mares y a los océanos, desde la zona de rompientes hasta el mar abierto. Incluye la que se produce en las costas, en los puertos, en las plataformas pesqueras, en la industria, en la navegación y en las zonas marítimas. Tiene un carácter global y requiere convenios internacionales, como MARPOL, y esfuerzos internacionales dirigidos a reducirla y asegurar un desarrollo sostenible del medio marino.
+  La contaminación marina, o contaminación del mar, es la contaminación que afecta a los mares y a los océanos, desde la zona de rompientes 
+  hasta el mar abierto. Incluye la que se produce en las costas, en los puertos, en las plataformas pesqueras, en la industria, en la 
+  navegación y en las zonas marítimas. Tiene un carácter global y requiere convenios internacionales, como MARPOL, y esfuerzos 
+  internacionales dirigidos a reducirla y asegurar un desarrollo sostenible del medio marino.
 <br>
 <br>
-La contaminación marina se produce cuando existen efectos dañinos o potencialmente dañinos que resultan de la introducción al océano de productos químicos, partículas, desechos industriales, agrícolas y residenciales, ruido excesivo o la propagación de organismos invasores. El 80 % de la contaminación marina proviene de la tierra. La contaminación por el aire es también un factor contribuyente al trasladar partículas de pesticidas u otros contaminantes al océano. La contaminación de la tierra y el aire ha demostrado ser perjudicial para la vida marina y sus hábitats.
+  La contaminación marina se produce cuando existen efectos dañinos o potencialmente dañinos que resultan de la introducción al 
+  océano de productos químicos, partículas, desechos industriales, agrícolas y residenciales, ruido excesivo o la propagación de 
+  organismos invasores. El 80 % de la contaminación marina proviene de la tierra. La contaminación por el aire es también un factor 
+  contribuyente al trasladar partículas de pesticidas u otros contaminantes al océano. La contaminación de la tierra y el aire ha 
+  demostrado ser perjudicial para la vida marina y sus hábitats.
 <br>
 <br>
 <br>
