--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Sexta_Extincion/ITEMS_Sexta_Extincion/PRIMERA_Extincion.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Sexta_Extincion/ITEMS_Sexta_Extincion/PRIMERA_Extincion.html
@@ -4,10 +4,8 @@
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="../../../css/bootstrap.min.css">
+  <link rel="stylesheet" href="../../../css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="../../../css/contenido.css">
-  <script src="../../../js/jquery-3.4.1.min.js"></script>
-  <script src="../../../js/bootstrap.min.js"></script>
   <title>Primera Extinción</title>
 </head>
 
