--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Suelos/ITEMS_Suelos/INTROITO_Suelos.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Suelos/ITEMS_Suelos/INTROITO_Suelos.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+
+<!DOCTYPE html>
 <html>
 <head>
   <title>Portada de la Antología de Lógica</title>
@@ -16,20 +17,23 @@
 <body BGColor=white>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~[ SECCION ]~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ //-->
 <div id="titulo">
-   Introito
+   Introduccion
 </div>
 
 <hr color="blue">
 
 <div id="section">
-   El caracter depredador de muchos hombres, motivados por su codicia, esta haciendo un gran daño a muchas de las especies alrededor del mundo y en consecuencia estan en
-   peligro inminente de extinción. Este caracter depredador es una de las causas que estan contribuyendo a la sexta extinción.
-   <hr>
-   Hugo Rangel<br>
+La contaminación del suelo es una degradación de la calidad del suelo asociada a la presencia de sustancias químicas.Se define como el aumento en la concentración de compuestos químicos, de origen antropogénico, que provoca cambios perjudiciales y reduce su empleo potencial, tanto por parte de la actividad humana, como por la naturaleza.
+<br>
+<br>
+Se habla de contaminación del suelo cuando se introducen sustancias o elementos de tipo sólido, líquido o gaseoso que ocasionan que se afecte la biota edáfica, las plantas, la vida animal y la salud humana.
+<br>
+<br>
+<center>
+   <img src="IMAGENES_Suelos/Suelo.jpg" style="width:50%; float: center;">
+</center>
+<hr color="blue">
 </div>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~[ FINAL ]~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ //-->
 </body>
 </html>
-
-
-
