--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Sexta_Extincion/ITEMS_Sexta_Extincion/TERCERA_Extincion.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Sexta_Extincion/ITEMS_Sexta_Extincion/TERCERA_Extincion.html
@@ -4,48 +4,108 @@
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="../../../css/bootstrap.min.css">
+  <link rel="stylesheet" href="../../../css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="../../../css/contenido.css">
-  <script src="../../../js/jquery-3.4.1.min.js"></script>
-  <script src="../../../js/bootstrap.min.js"></script>
-  <title>Extinciones Masivas</title>
+  <title>Tercera Extinción</title>
 </head>
+
 <body>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~[ SECCION ]~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ //-->
-<div id="titulo">
-  Tercera Extinción
+<div class="row">
+  <div class="col-sm-12">
+    <h2>
+      Tercera Extinción: La extinción masiva del Pérmico-Triásico
+    </h2>
+  </div>
 </div>
 
 <hr color="blue">
 
 <div class="row">
-  <div class="col-sm-9">
+  <div class="col-sm-12">
       <div class="container">
           <p>
-            Una extinción masiva es un tipo de extinción terminal en la cual desaparecen sin descendencia un 10 % o más de las especies a lo largo de un año,
-            o bien un 50 % o más de las especies en un periodo comprendido entre uno y tres millones y medio de años, cuando en momentos normales las extinciones 
-            se producen a un ritmo de entre dos y cinco familias biológicas de invertebrados marinos y vertebrados cada millón de años. Desde que la vida empezó
-            en la Tierra se han detectado cinco sucesos en el eón Fanerozoico tras los cuales se han extinguido más de las mitad de las especies existentes.
+            La extinción masiva del Pérmico-Triásico (PT), llamada también de manera informal la Gran Mortandad, 
+            fue una extinción masiva ocurrida hace aproximadamente 250 millones de años y define el límite entre 
+            los períodos Pérmico y Triásico. Ha sido la mayor extinción ocurrida en la Tierra. En ella desaparecieron 
+            aproximadamente el 95 % de las especies marinas y el 70 % de las especies de vertebrados terrestres. 
+            Con tan poca biodiversidad resultante, la vida tardó mucho tiempo en recuperarse. Numerosas ramas 
+            evolutivas del árbol de la vida fueron cercenadas, dejando muy pocos representantes disponibles para 
+            repoblar el planeta. Durante largo tiempo la Tierra solo fue un páramo desértico dominado por los hongos.
           </p>
           <p>
-            En ocasiones las extinciones masivas se confunden con un evento ligado a la extinción,​ del inglés Extinction-Level Event o ELE, que sería el suceso, 
-            más o menos largo, provocador de dichas extinciones. Estos eventos son generalmente desconocidos, pero existen evidencias de colisiones con meteoritos 
-            de varios kilómetros, erupciones volcánicas masivas, supernovas cercanas, las acciones de una o más nuevas especies, combinaciones de las anteriores, etc. 
-            Del mismo modo, está bajo discusión si en el Holoceno vivimos la sexta gran extinción y si el surgimiento de las bacterias eucariotas y la exterminación de 
-            muchas bacterias procariotas por la expulsión de oxígeno pudo ser la primera y la desaparición de la Fauna de Ediacara otra más.
+            Las causas de la hecatombe biológica aún son desconocidas para la ciencia. Compiten varias hipótesis: 
+            un vulcanismo extremo, un impacto de un asteroide de gran tamaño, la explosión de una supernova 
+            cercana y la liberación de ingentes cantidades de gases de invernadero atrapadas en los fondos 
+            oceánicos en forma de hidratos de metano. El problema dista mucho de estar cerrado, pero 
+            conociendo la gran resistencia de la vida en la Tierra, para producir semejante nivel de 
+            destrucción las especies debieron haberse visto atacadas desde varios frentes. Por ello, actualmente 
+            se cree en la posibilidad de una confluencia de factores que convergieron en el tiempo para producir 
+            el que, con gran diferencia, fue el evento de extinción y destrucción sobre la biosfera más 
+            devastador que la Tierra haya conocido.
           </p>
           <hr>
-          
-          Fuente: <a href="https://es.wikipedia.org/wiki/Extinción_masiva"> https://es.wikipedia.org/wiki/Extinción_masiva</a>
-      </div>
-  </div>
-  <div class="col-sm-3">
-    <img src="IMAGENES_Sexta_Extincion/yelmo.jpg" class="img-fluid rounded-circle" alt="Yelmo">
+          <h3>Causas</h3>
+          <h4>Vulcanismo</h4>
+          <p>
+            En Siberia se produjeron erupciones masivas que produjeron enormes flujos de basalto que durarían 
+            miles de años. Las trapps o escaleras siberianas forman actualmente una gran provincia en Siberia, 
+            en la que hace alrededor de 251 a 250 millones de años se produjo uno de los más grandes eventos 
+            volcánicos conocidos en los últimos 500 millones de años de la historia geológica de la Tierra. 
+            Hoy en día, el área cubierta por basalto es de aproximadamente 2 millones de km² y se estima que 
+            la original fue de 7 millones de km², con un volumen original de lava de 1 a 4 millones de km<sup>3</sup>. 
+            Basándose en la cantidad de lava se calcula que se liberó suficiente dióxido de carbono para aumentar 
+            la temperatura del planeta en 5 °C, aunque no lo suficiente como para matar al 95 % de las formas de vida.
+          <p>
+            Otro efecto del vulcanismo fue una extensa contaminación de los océanos por el incremento de las 
+            concentraciones de mercurio, especialmente en aguas someras y poco profundas, lugares de gran 
+            importancia para la actividad orgánica.
+          </p>
+          </p>
+          <h4>Liberación de hidratos de metano</h4>
+          <p>
+            Esta teoría enlaza con la erupción del flujo de basalto. El calentamiento producido por 
+            las erupciones podría aumentar lentamente la temperatura del océano hasta descongelar 
+            los depósitos de hidrato de metano que hay debajo del fondo oceánico cerca de las costas. 
+            Esto liberaría a la atmósfera suficiente metano para elevar las temperaturas en 5 °C 
+            adicionales (el metano es uno de los gases de efecto invernadero más potentes). Esta hipótesis 
+            ayuda a explicar el aumento de los niveles de carbono-12 a mitad de la capa de transición del 
+            Pérmico-Triásico. También ayudaría a explicar por qué las fases uno y tres de la extinción se 
+            produjeron en la superficie y la fase dos en los lechos marinos (el comienzo de esta fase fue 
+            inmediatamente después del aumento de los niveles de C-12).
+          </p>
+          <h4>Liberación de sulfuro de hidrógeno</h4>
+          <p>
+            Otra hipótesis involucra la liberación de sulfuro de hidrógeno en los océanos. Las aguas 
+            oceánicas profundas pierden periódicamente la totalidad de su oxígeno disuelto, lo que permite 
+            que las bacterias anaerobias (por ejemplo, las bacterias verdes del azufre) proliferen y 
+            produzcan sulfuro de hidrógeno. Si se produce una cantidad suficiente de sulfuro de hidrógeno, 
+            este sube a la atmósfera. Los niveles de sulfuro de hidrógeno, tóxico para la mayoría de seres 
+            vivos, aumentarían drásticamente en unos pocos cientos de años. Los modelos de este fenómeno 
+            indican que el gas destruiría el ozono de la atmósfera superior y la radiación ultravioleta 
+            mataría a las especies que hubiesen sobrevivido a los gases tóxicos.
+          </p>
+          <h4>Impacto de un gran meteorito</h4>
+          <p>
+            En 2006 se encontró el gran cráter de un posible impacto de meteorito en la Tierra de Wilkes, 
+            en la Antártida. El cráter tiene un diámetro de alrededor de 500 kilómetros y está situado a 
+            una profundidad de 1,6 kilómetros bajo el hielo de la Antártida. Los científicos especulan 
+            que este impacto pudo haber causado la extinción Pérmico-Triásico. A pesar de su edad, 
+            sólo ha podido determinarse en el amplio rango comprendido entre 100 millones y 500 millones 
+            de años atrás. También se especula que puede haber contribuido de alguna manera a la separación 
+            de Australia de la Antártida, que en ese momento formaban parte del supercontinente de Gondwana. 
+            Los niveles de iridio y el cuarzo fracturado en capa de transición Pérmico-Triásico difieren de 
+            los de la transición Cretácico-Terciario. No se conoce el impacto que pudo tener este meteorito, 
+            pues los fósiles hallados en Groenlandia muestran que la extinción pudo haber sido gradual, 
+            con una duración de alrededor de ochenta mil años, en tres fases distintas. Sin embargo, se 
+            especula que el impacto podría haber provocado una onda de tipo sísmico que a su vez produjo 
+            la ruptura de la corteza terrestre en el punto opuesto de la Tierra o antípoda. En este punto 
+            se encontraban en esa época las traps siberianas, por lo que la teoría del impacto concuerda 
+            con la hipótesis del vulcanismo.
+          </p>
+        </div>
   </div>
 </div>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~[ FINAL ]~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ //-->
 </body>
 </html>
-
-
-
