--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Atmosfera/ITEMS_Atmosfera/INTROITO_Atmosfera.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Atmosfera/ITEMS_Atmosfera/INTROITO_Atmosfera.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+
+<!DOCTYPE html>
 <html>
 <head>
   <title>Portada de la Antología de Lógica</title>
@@ -16,20 +17,25 @@
 <body BGColor=white>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~[ SECCION ]~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ //-->
 <div id="titulo">
-   Introito
+   Introduccion
 </div>
 
 <hr color="blue">
 
 <div id="section">
-   El caracter depredador de muchos hombres, motivados por su codicia, esta haciendo un gran daño a muchas de las especies alrededor del mundo y en consecuencia estan en
-   peligro inminente de extinción. Este caracter depredador es una de las causas que estan contribuyendo a la sexta extinción.
-   <hr>
-   Hugo Rangel<br>
+ La contaminación atmosférica es la presencia en el aire de materias o formas de energía que implican riesgo, daño o molestia grave para las personas y bienes de cualquier naturaleza,​ así como que puedan atacar a distintos materiales, reducir la visibilidad o producir olores desagradables.
+<br>
+<br>
+Desde que la Revolución Industrial inició en la segunda mitad del siglo XVIII, los procesos de producción en las fábricas, el desarrollo del transporte y el uso de los combustibles han incrementado la concentración del dióxido de carbono en la atmósfera y otros gases que son muy perjudiciales para la salud, como los óxidos de azufre y los óxidos de nitrógeno.
+<br>
+<br>
+<br>
+<center>
+   <img src="IMAGENES_Atmosfera/atmosfera.jpg" style="width:50%; float: center;">
+</center>
+<br>
+<hr color="blue">
 </div>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~[ FINAL ]~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ //-->
 </body>
 </html>
-
-
-
