Cambio las referencias al css compartido

--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Atmosfera/MENU_Atmosfera.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Atmosfera/MENU_Atmosfera.html
@@ -3,8 +3,8 @@
 <html>
 <head>
    <title>MENU_Atmosfera</title>
-   <link rel="stylesheet" href="ITEMS_Atmosfera/w3.css">
-   <link rel="stylesheet" href="ITEMS_Atmosfera/nav.css">
+   <link rel="stylesheet" href="../../css/w3.css">
+   <link rel="stylesheet" href="../../css/nav.css">
 </head>
 <body>
 <div class="w3-row w3-border">
