--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Suelos/MENU_Suelos.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Suelos/MENU_Suelos.html
@@ -4,8 +4,8 @@
 <html>
 <head>
    <title>MENU_Suelos</title>
-   <link rel="stylesheet" href="ITEMS_Suelos/w3.css">
-   <link rel="stylesheet" href="ITEMS_Suelos/nav.css">
+   <link rel="stylesheet" href="../../css/w3.css">
+   <link rel="stylesheet" href="../../css/nav.css">
 </head>
 <body bgcolor="white">
 <div class="w3-row w3-border">
