--- a/antologia/PORTADA_Polucion_Global.html
+++ b/antologia/PORTADA_Polucion_Global.html
@@ -7,42 +7,34 @@
   <title>Portada_Polucion_Global</title>
   <link rel="stylesheet" href="css/w3.css">
 <style>
-
 html{
   height: 100%;
 }
-
 body{
   padding: 0px;
   margin: 0px;
   height: 100%;
 }
-
 body::-webkit-scrollbar {
    width: 8px;
 }
-
 body::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
   border-radius:10px;
 }
-
 body::-webkit-scrollbar-thumb {
    background-color: orange;
    border-radius:10px;
 }
-
 ul {
       margin: 0;
       padding: 0px;
 }
-
 li {
       display: in-line;
       list-style-type: none;
 }
-
 a:link, a:visited {
       color: #FFFFFF;
       width: 250px;
@@ -50,16 +42,13 @@ a:link, a:visited {
       padding: 4px;
       text-decoration: none;
 }
-
 a:hover, a:active {
       background-color:rgba(0,0,255,0.7);
 }
-
 #header {
       background-color: blue;
       height: 4px;
 }
-
 #header0 {
       font-size: 14px;
       text-align: center;
@@ -73,17 +62,14 @@ a:hover, a:active {
       width: 100%;
       margin: auto;
 }
-
 .sangria {
 	text-indent:10px;
 }
-
 .Testa {
 	width: 100%; /*1392px;*/
 	height: 110px;
 	margin-bottom: 20px;
 }
-
 .Titulo {
 	font-family: "New Times Roman";
 	font-size: 34px;
@@ -97,7 +83,6 @@ a:hover, a:active {
 	border:1px solid black;
 	border-radius:5px;
 }
-
 #footer {
 	background-color: blue;
 	font-size:14px;
@@ -109,17 +94,14 @@ a:hover, a:active {
 	font-family: "New Times Roman";
 	padding: 0px 10px 0px 10px;
 }
-
 ul#menu-hor {
     padding: 0px;
     margin: auto;
     width: 72%;
 }
-
 ul#menu-hor li {
     display: inline;
 }
-
 ul#menu-hor li a {
     color: white;
     padding: 2px 2px;
@@ -127,7 +109,6 @@ ul#menu-hor li a {
     border-radius: 2px 2px;
     background-color: #008888; /*#66CCCC;*/
 }
-
 ul#menu-hor li a:hover {
     background-color: black;
 }
@@ -140,28 +121,23 @@ ul#menu-hor li a:hover {
 	text-align: left;
 	background:#EFDFDE;
 }
-
 #header {
 	font-family: Castellar;
 	font-size:16px;
 }
-
 .Texto {
 	font-family: Verdana;
 	font-size: 14px;
 	text-align: justify;
 }
-
 table, th, td {
 	border: 1px solid black;
 	border-collapse: collapse;
 }
-
 th, td {
 	padding: 5px;
 	text-align: left;
 }
-
 hr {
 	padding: 0px; margin-top: 18px; margin-bottom: 2px; width: 100%
 }
@@ -196,7 +172,7 @@ hr {
       <li><a href="CATEGORIAS_Polucion_Global/CATEGO_Conflicto_por_agua_Mexico_EUA/MENU_Conflicto_por_agua_Mexico_EUA.html" target="iframe_z">Conflicto por agua: México EUA</a></li> |
       
       <li><a href="CATEGORIAS_Polucion_Global/CATEGO_Biografia_de_Mario_Molina/MENU_Biografia_de_Mario_Molina.html" target="iframe_z">Biografía de Mario Molina</a></li> |
-      <li><a href="PORTADA_Polucion_Global.html" target="top_">Conclusiones</a></li> |
+      <li><a href="CATEGORIAS_Polucion_Global/CATEGO_Conclusiones/Conclusiones.html" target="iframe_z">Conclusiones</a></li> |
       <li><a href="ITEMS_Polucion_Global/Que_es.html" target="iframe_z">¿Qué es una antología digital?</a></li> |
       <li><a href="PORTADA_Polucion_Global.html" target="top_">A casa</a></li> ]
     </ul>
