--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Conclusiones/Conclusiones.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Conclusiones/Conclusiones.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="es-MX">
 <head>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="../../css/bootstrap-grid.min.css">
     <title>Conclusiones</title>
 <style>
     .ctndor {
@@ -32,22 +36,28 @@
 </head>
 <body>
     <div class="ctndor">
-<hr color="blue">
-     <center>
-        <div id="titulo">
-            Conclusiones
-        </div>
-      </center>
+        <hr color="blue">
+        <center>
+            <div id="titulo">
+                Conclusiones
+            </div>
+        </center>
         <div class="parrafo">
-   Carlos:
-   <br>
-   <br>
-   El tema de la contaminacion global es una realidad en nuestros tiempos que cada vez se hace mayor y empeora, muchas veces es por falta de informacion que ignoramos todos estos cambios en nuestro planeta y creemos que no es grave, creo que es importante que tomemos consciencia de la situacion en la que estamos y comenzar a tomar acciones para el cambio, como dicen primero se tiene que empezar cambiando uno mismo para despues poder cambiar a nuestro entorno y personas que nos rodean, espero que este trabajo genere una consciencia mayor en las personas acerca de nuestro futuro asi como lo hizo conmigo.
-   <br>
-   <br>       
- </div>
- <hr color="blue">      
+            Carlos:
+            <br>
+            <br>
+            El tema de la contaminación global es una realidad en nuestros tiempos que 
+            cada vez se hace mayor y empeora, muchas veces es por falta de información 
+            que ignoramos todos estos cambios en nuestro planeta y creemos que no es grave, 
+            creo que es importante que tomemos consciencia de la situación en la que estamos y 
+            comenzar a tomar acciones para el cambio, como dicen primero se tiene que empezar 
+            cambiando uno mismo para después poder cambiar a nuestro entorno y personas que nos 
+            rodean, espero que este trabajo genere una consciencia mayor en las personas acerca 
+            de nuestro futuro así como lo hizo conmigo.
+            <br>
+            <br>       
+        </div>
+        <hr color="blue">      
     </div>
-
 </body>
 </html>
