--- a/antologia/CATEGORIAS_Polucion_Global/CATEGO_Conclusiones/Conclusiones.html
+++ b/antologia/CATEGORIAS_Polucion_Global/CATEGO_Conclusiones/Conclusiones.html
@@ -5,57 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../../css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="css/estilo.css">
     <title>Conclusiones</title>
-<style>
-    .ctndor {
-      width: 70%;
-      overflow: auto;
-      margin: auto;
-      height: auto;
-    }
-
-    .parrafo {
-        font-family:Verdana; 
-        font-size:16px; 
-        font-style:bold; 
-        padding:5px; 
-        text-align:justify;
-    }
-
-    #titulo {
-        font-family: Georgia; 
-        font-size:25px; 
-        padding:2px; 
-        text-align:center;
-    }
-
-    .sangria {
-        text-indent: 40px;
-    }
-</style>
 </head>
 <body>
     <div class="ctndor">
         <hr color="blue">
-        <center>
-            <div id="titulo">
-                Conclusiones
-            </div>
-        </center>
+        <h1 id="titulo">
+            Conclusiones
+        </h1>
         <div class="parrafo">
-            Carlos:
-            <br>
-            <br>
-            El tema de la contaminación global es una realidad en nuestros tiempos que 
-            cada vez se hace mayor y empeora, muchas veces es por falta de información 
-            que ignoramos todos estos cambios en nuestro planeta y creemos que no es grave, 
-            creo que es importante que tomemos consciencia de la situación en la que estamos y 
-            comenzar a tomar acciones para el cambio, como dicen primero se tiene que empezar 
-            cambiando uno mismo para después poder cambiar a nuestro entorno y personas que nos 
-            rodean, espero que este trabajo genere una consciencia mayor en las personas acerca 
-            de nuestro futuro así como lo hizo conmigo.
-            <br>
-            <br>       
+            <strong>
+                Carlos:
+            </strong>
+            <p>
+                El tema de la contaminación global es una realidad en nuestros tiempos que 
+                cada vez se hace mayor y empeora, muchas veces es por falta de información 
+                que ignoramos todos estos cambios en nuestro planeta y creemos que no es grave, 
+                creo que es importante que tomemos consciencia de la situación en la que estamos y 
+                comenzar a tomar acciones para el cambio, como dicen primero se tiene que empezar 
+                cambiando uno mismo para después poder cambiar a nuestro entorno y personas que nos 
+                rodean, espero que este trabajo genere una consciencia mayor en las personas acerca 
+                de nuestro futuro así como lo hizo conmigo.
+            </p>
+            <strong>
+                Andrés González:
+            </strong>
+            <p>
+                
+            </p>
         </div>
         <hr color="blue">      
     </div>
